# arduino-pedalboard-midi

./: .gitmodules  README.md
arduino/: CMakeLists.txt
arduino/src/: SwitchButton.cpp  SwitchButton.h  sketch.ino
desktop/: CMakeLists.txt
desktop/src/: CMakeLists.txt  JSONManipulator.cpp  JSONManipulator.h  MainWindow.cpp  MainWindow.h  MainWindow.ui
desktop/src/communication/: MIDICommunication.cpp  MIDICommunication.h  SerialCommunication.cpp  SerialCommunication.h
desktop/src/config/: AppConfiguration.cpp  AppConfiguration.h
desktop/src/resources/: resources.qrc
desktop/src/ui/: MainWindow.cpp  MainWindow.h  MainWindow.ui
desktop/src/ui/settings/: SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui
